--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@react-three/drei": "^9.80.0",
     "@react-three/fiber": "^8.13.6",
     "framer-motion": "^10.13.1",
+    "gen-env": "^1.0.1",
     "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
